Test restart pod after secret updated

--- a/vault-secret-operator/static-secret/static-secret.yaml
+++ b/vault-secret-operator/static-secret/static-secret.yaml
@@ -15,6 +15,11 @@ spec:
   destination:
     name: secretkv
     create: true
+  
+  # Restart these pods when secrets rotated
+  rolloutRestartTargets:
+  - kind: Deployment
+    name: demo
 
   # static secret refresh interval
   refreshAfter: 30s
