Test restart pod after secret updated

--- a/vault-secret-operator/static-secret/app-deployment.yaml
+++ b/vault-secret-operator/static-secret/app-deployment.yaml
@@ -25,6 +25,7 @@ spec:
       containers:
         - name: example
           image: nginx:latest
+          imagePullPolicy: IfNotPresent 
           env:
             - name: DB_PASSWORD
               valueFrom:
